--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="container">
 
         <section>
-          <h1 class="alert alert-success">Portafolio del Proyecto AGRICOTECH</h1>
+          <h1 class="alert alert-success">Portafolio del Proyecto AGRICOTECH v1.0</h1>
           <article class="alert alert-light ">
             <p class="text-justify">
               
